--- a/src/app/casino-tournament/casino-tournament.component.html
+++ b/src/app/casino-tournament/casino-tournament.component.html
@@ -8,15 +8,11 @@
 
 
 
-            <p style="font-weight: 300; padding: 24px 0px; color: rgb(87,87,86); font-family: 'Raleway', sans-serif;"> An important tool which allows you to <strong>increase the incomes</strong> in the casino section is the <strong>Casino Tournaments.</strong></p>
-
-            <h2 style="font-weight: 200;padding: 15px 0px;  color: rgb(87,87,86); font-size: 24px; font-family: 'Raleway', sans-serif;">You will be able to <strong>customize the tournament</strong> by choosing the list of the slots which will participate in the promotion.</h2>
-
-            <p style="font-weight: 300; padding: 15px 0px; color: rgb(87,87,86);  letter-spacing: 0em; line-height: 1.8;">In order <strong> to create a promotion</strong> you will just need to <strong>choose</strong> a <strong>name</strong> for the <strong>tournament,</strong> the <strong>slots</strong> and the <strong>jackpot </strong>which will be divided into <strong>different prizes,</strong> also in this case chosen by you.</p>
-
-            <p style=" padding: 15px 0px; color: rgb(87,87,86); font-family: 'Raleway', sans-serif; word-spacing: 3px;">You just have to enter the <strong>start date,</strong> the <strong>end date,</strong> the <strong>total jackpot, </strong>the number of the persons in the ranking and also the minimum amount to bet in order to participate in the <strong>tournament.</strong></p>
-
-            <p style="font-weight: 300; padding: 15px 0px; color: rgb(87,87,86); font-family: 'Raleway', sans-serif; line-height: 1.8;">Also, you can always view the ranking with the username of the players, the position and the real time prize.</p>
+            <p style="font-weight: 300; padding: 24px 0px; color: rgb(87,87,86); font-family: 'Raleway', sans-serif;">A powerful tool at your disposal for boosting casino section revenues is the implementation of <strong>Casino Tournaments.</strong></p>
+            <h2 style="font-weight: 200; padding: 15px 0px; color: rgb(87,87,86); font-size: 24px; font-family: 'Raleway', sans-serif;">You'll have the ability to fully <strong>customize each tournament</strong> by handpicking the list of slots that will participate in the competition.</h2>
+            <p style="font-weight: 300; padding: 15px 0px; color: rgb(87,87,86); letter-spacing: 0em; line-height: 1.8;">To <strong>create a promotion</strong>, you simply need to select a <strong>title</strong> for the <strong>tournament</strong>, designate the <strong>slots</strong> to be included, and specify the <strong>jackpot </strong>which will be distributed among <strong>various prizes</strong>, all of which can be tailored to your preferences.</p>
+            <p style="padding: 15px 0px; color: rgb(87,87,86); font-family: 'Raleway', sans-serif; word-spacing: 3px;">Key details to input include the <strong>start date,</strong> the <strong>end date,</strong> the <strong>total jackpot,</strong> the number of participants in the rankings, as well as the minimum wagering requirement for tournament entry.</p>
+            <p style="font-weight: 300; padding: 15px 0px; color: rgb(87,87,86); font-family: 'Raleway', sans-serif; line-height: 1.8;">Moreover, you'll always have access to a real-time leaderboard displaying usernames, player positions, and corresponding prizes.</p>
         </div>
 
 
