--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <nav>
       <div class="nav_row">
         <div class="nav_col">
-          <img class="vrnl_logo" src="assets/VRNL new.png" routerLink="/" alt="vrnl-logo" />
+          <img class="vrnl_logo" src="assets/VRNL new LOGO copy.png" routerLink="/" alt="vrnl-logo" />
         </div>
         <div class="nav_col_2">
           <div class="nav_row_2">
@@ -183,7 +183,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <div class="nav_col" routerLink="/">
-        <img src="assets/VRNL new.png" alt="vrnl-logo" />
+        <img src="assets/VRNL new LOGO copy.png" alt="vrnl-logo" />
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
