--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -4,14 +4,14 @@
     <div class="white_casino_row whites_label">
         <div class="white_casino_col">
     <h1 class="white_c_header"><span>Online</span> Casino platform</h1>
+
+    <p class="white_c_param">We provide a <strong> White Label Casino </strong>solution complete with Trading Software and a suite of advanced tools.
     
-    <p class="white_c_param">We offer <strong> White Label Casino </strong>with Trading Software & Tools.
-    
-    </p>
-    <p class="white_c_param_2">The <strong>online casino platform</strong> is simple as our software is easy to manage whether you are a novice or seasoned pro. At Vrnl, we will provide you with all the advice you need to <strong>start online casino.</strong></p>
+    </p>  
+    <p class="white_c_param_2">Our <strong>online casino platform</strong> is known for its simplicity, making it easily manageable whether you're a newcomer or a seasoned professional. At Vrnl, we are committed to offering the guidance and support required to <strong>kickstart your online casino venture.</strong></p>
     <p></p>
     
-    <em class="white_c_param">Before starting, see it in action:</em>
+    <em class="white_c_param">Before you take the plunge, we invite you to witness its seamless operation in action.</em>
     <p class="whitw_a" ><a href="https://betwin123.live/" target="_blank" class="fontcolor">https://betwin123.live/</a></p>
         </div>
     
@@ -34,18 +34,18 @@
             <div class="white_f_col_1">
     
      <h1 class="white_c_header">White label casino <span style="font-weight:100">Main features</span></h1>
-    <p class="white_f_p">The tools we put at your disposal to manage our online casino platform are hundreds, here we list the most powerful and above all those necessary to compete online in the international arena:</p>
-    <ul class="white_f_list" >
-        <li> <strong class="black-color">The largest catalog of online casino games on the planet, </strong> selected from the best providers in the industry.
+    <p class="white_f_p">We offer an extensive array of tools designed to empower you in the management of our online casino platform. Among these, we've distilled the selection to focus on the most influential and, significantly, the indispensable ones required for thriving in the competitive global arena:</p>
+    <ul class="white_f_list">
+        <li> <strong class="black-color">The most extensive catalog of online casino games worldwide,</strong> meticulously selected from the industry's top-rated providers.
         </li>
-        <!-- <li>All games on our platform are <strong class="black-color"> certified and the math is guaranteed.</strong> </li> -->
-        <li> <strong class="black-color">Bonus Tools</strong> and Slot profitability
+        <!-- <li>All games on our platform are <strong class="black-color">certified, ensuring guaranteed fairness.</strong> </li> -->
+        <li> <strong class="black-color">Tools for Bonuses</strong> and Slot Profitability Optimization
         </li>
-        <li> <strong class="black-color">Campaign builder</strong> and management of game tournaments</li>
-        <li>Can be <strong class="black-color">integrated via API or iFrame</strong>
+        <li> <strong class="black-color">Campaign Builder</strong> and Management of Game Tournaments</li>
+        <li>Can be <strong class="black-color">seamlessly integrated through API or iFrame technology.</strong>
         </li>
     </ul>
-    <p class="white_f_p2"><em>Also included you will also have live casino software that allows you to offer your users the experience of a real casino right at their home.</em></p>
+    <p class="white_f_p2"><em>In addition, our package includes live casino software, enabling you to provide your users with the authentic experience of a real casino from the comfort of their own homes.</em></p>
     
     
     <button class="white_f_btn" routerLink="/contact">Book a demo</button>
@@ -60,11 +60,12 @@
      <div class="whites_content">
     <h1 class="whites_h1">Which will be the benefits?</h1>
     <h3 class="whites_h3">Let us Explain</h3>
-    <p class="whites_param"> <span class="head_para">If you want to enter the business of the Online Gambling, a <strong style="color: rgb(87 87 86);">casino White Label solution could help you to take the first steps.</strong></span> </p>
-    <p class="param_fea">
-        Take advantage of our professional services and expertise, as well as of our <strong>Casino platforms</strong>  and Technology. Our regulated partners receive all the support they need to enter the online Casino industry and are provided with Branded/ Non-Branded versions of our platforms.</p>
-        <p class="param_fea">Starting an Online Casino can be tricky! That is why we have created a complete Casino environment, with the best gaming providers with the aim of offering you the widest selection of slots and casino games available online, <strong>with over 1,000 games</strong> . The gaming math is secure and certified.</p>
-        <p class="param_fea">With extensive risk management tools to enable a quick and easy set-up, which is ready to grow as your business does.</p>
+   
+<p class="whites_param"> <span class="head_para">If you're considering entering the Online Gambling business, a <strong style="color: rgb(87 87 86);">casino White Label solution could be your stepping stone.</strong></span> </p>
+<p class="param_fea">
+    Leverage our professional services and expertise, in addition to our <strong>Casino platforms</strong> and cutting-edge technology. Our regulated partners receive comprehensive support to embark on their journey into the online Casino industry, and they have the option of branded or non-branded versions of our platforms.</p>
+<p class="param_fea">Initiating an Online Casino venture can be a complex endeavor! That's why we've crafted a comprehensive Casino environment, featuring the finest gaming providers, to provide you with the broadest array of slots and casino games available online, boasting <strong>over 1,000 games</strong>. The gaming math is secure and certified for your peace of mind.</p>
+<p class="param_fea">With an array of robust risk management tools that enable swift and effortless setup, your platform is poised for expansion as your business grows.</p>
     <div class="whites_label">
         <div>
             <span>
@@ -83,18 +84,16 @@
     <div class="white_sol_row">
         <div class="white_sol_col">
     <h1 class="white_sol_h">Complete  <span> Casino White Label</span> Solutions</h1>
-    <p class="white_sol_p">What have we got for you?</p>
+    <p class="white_sol_p">What do we offer for you?</p>
     <ul class="white_sol_list">
-        <li>Verification Procedures, approved by the regulatory bodies</li>
-        <li>Affiliate marketing tools, referral system, and social media</li>
-        <li>Mobile Push Notifications, Web Push Notifications and In-App Messaging</li>
-        <li>Player Account Controls, Registration and Verification, Fraudulent Accounts detections system</li>
-        <li>Geolocation tools to extract IP address location information</li>
+        <li>Verification Procedures, officially approved by regulatory authorities</li>
+        <li>Affiliate marketing tools, a referral system, and social media integration</li>
+        <li>Mobile Push Notifications, Web Push Notifications, and In-App Messaging</li>
+        <li>Player Account Controls, Registration and Verification, and a Fraudulent Account Detection System</li>
+        <li>Geolocation tools for extracting IP address location information</li>
     </ul>
-    <p><strong class="color-grey">Wait, there’s more</strong>
-    </p>
-    <p class="whites_sol_p2"> <strong>Vrnl’s platform is optimized for exceptional performance</strong>  and high stability. We use the latest technology, which performs up to 2x faster than conventional casino platform around.
-        Our long experience and our intuition gave birth to the fastest and most powerful application existing nowadays.</p>
+    <p><strong class="color-grey">But wait, there's more</strong></p>
+    <p class="whites_sol_p2"> <strong>Vrnl's platform is meticulously optimized for exceptional performance</strong> and unwavering stability. We harness cutting-edge technology that operates up to twice as fast as traditional casino platforms. Our extensive experience and insight have given rise to the swiftest and most potent application in existence today.</p>
         </div>
         <div class="white_csol_col_1">
       <img
@@ -115,23 +114,17 @@
         </div>
         <div class="white_labe_live_col_1">
             <h1 class="white_live_h"> <span>White Label</span>  Casino in numbers</h1>
-            <p class="white_live_p1">The world’s best selection of leading Live Casino providers</p>
-            <p class="white_live_p">The widest selection of live tables online and multi-channel delivery.</p>
-            <ul class="white_live_list">
-                <li>Providers 75 + more than
-                </li>
-                <li>Slot machine 15,000 + more than
-                </li>
-                <li>Table games 500 + more than
-                </li>
-                <li>Video poker 700 + more than
-                </li>
-                <li>Other games 200 + more than
-                </li>
-            </ul>
-            <p class="white_live_p2">Our staff will assist you in all phases from initial training to production start-up.
-    
-            </p>
+           
+<p class="white_live_p1">The finest selection of leading Live Casino providers worldwide</p>
+<p class="white_live_p">An unparalleled variety of live tables available online, featuring multi-channel delivery.</p>
+<ul class="white_live_list">
+    <li>Over 75 providers</li>
+    <li>Exceeding 15,000 slot machines</li>
+    <li>500+ table games</li>
+    <li>700+ video poker games</li>
+    <li>More than 200 other games</li>
+</ul>
+<p class="white_live_p2">Our dedicated team will guide you through all phases, from initial training to launching your production.</p>
         </div>
     </div>
     </section>
