--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -13,22 +13,17 @@
   <section class="white-label">
     <div class="label-bet">
       <div class="label-para">
-        <p>
-          Vrnl’s <b  class="bold"> white label sportsbook solution</b> is a fully managed
-           sportsbook. 
+        <p> 
+          Vrnl’s <b  class="bold"> white label sportsbook solution</b> offers a comprehensive, fully managed sportsbook platform.
           <br />
           </p>
           <p>
-          The uniqueness of this kind of solution is the
-          <b class="bold">fastness in creating and delivering </b> the website, indeed our
-          staff can set up the website in ten working days according to
-          customers’ requests and proceeding towards building a
-          <b class="bold">custom-tailored sportsbook website.</b> <br /></p>
+          One of the standout features of our solution is its exceptional
+          <b class="bold">speed in website creation and deployment</b> Our dedicated team can have your sportsbook website up and running within just ten working days, 
+          <b class="bold">tailored precisely to your unique requirements.</b> <br /></p>
 
          <p>
-          <b class="bold"> We provide specialised hosting</b> , all required software and
-          sports odds data feeds, risk management and customer support
-          services.
+          <b class="bold"> Our service includes specialized hosting</b> ,all the necessary software, live sports odds data feeds, risk management tools, and top-notch customer support services.
         </p>
       </div>
       <div class="label-img">
@@ -43,23 +38,21 @@
     <div class="label-list-para">
       <ul class="label-list1">
         <li>
-          Creation of website, <b>branding, customisation</b>, and testing of
+          Website Development, <b>Branding, Tailoring</b>, and Rigorous Testing of
           the clients’ sportsbook
         </li>
-        <li>Regular updating and feature upgrades</li>
+        <li>Regular Ongoing Enhancements and Feature Updates</li>
         <li>
-          <b>Hardware setting up</b>, hosting, 24/7 monitoring and support
+          <b>Hardware Provisioning</b>, Hosting, Continuous 24/7 Vigilance, and Comprehensive Support
         </li>
         <li>
-          <b>Wide range of betting markets</b>, sports categories and leagues
+          <b>Diverse Array of Betting Markets</b>, , Sports Categories, and League Offerings
         </li>
-        <li>Bet acceptance and settlement</li>
-        <li>Risk management, accounting and monitoring tools</li>
+        <li>Efficient Bet Acceptance and Accurate Settlement Processes</li>
+        <li>Advanced Risk Management, Robust Accounting, and Vigilant Monitoring Tools</li>
       </ul>
       <p>
-        Thanks to close cooperation with our customers, we continuously
-        improve our sports betting software making it faster, more reliable
-        and easier to use.
+        Vrnl's dedicated consultants will diligently gather your requirements and present you with a curated selection of templates and recent development achievements. It's important to note that all of our platforms are designed to be multilingual and support multiple currencies, and the user interface (UI) will be meticulously adapted to suit your specific needs.
       </p>
     </div>
   </section>
@@ -74,13 +67,10 @@
         <h1 class="bottom-marg letter-spacing font-weight">Customizations</h1>
         <h2 class="sec-header">Be unique</h2>
         <p>
-          <b class="bold">Vrnl’s consultants will collect your requirements</b> and show
-          you several templates and recent development works: all the
-          platforms are multi language and multi currency, the UI will be
-          customized around your needs. <br />
+          <b class="bold">Vrnl's dedicated consultants will diligently gather your requirements and present you with a curated selection of templates and recent development achievements. It's important to note that all of our platforms are designed to be multilingual and support multiple currencies, and the user interface (UI) will be meticulously adapted to suit your specific needs.</b> <br />
 
           <br />
-          Take your first steps in Vrnl’s world.
+          Embark on your journey into the realm of Vrnl, where your unique vision comes to life.
         </p>
         <div
           class="niva-separator1"
@@ -100,8 +90,8 @@
         <h2 class="sec-header sec-line">The engine of the platform</h2>
         <p>
           We have already
-          <b class="bold">integrated the best odds providers in the world</b> and if that’s
-          not enough for you we can also integrate your favorite one. <br />
+          <b class="bold">
+            We have already seamlessly integrated the world's premier odds providers into our system, and if that doesn't suffice for your requirements, we are more than willing to incorporate your preferred choice as well.</b> <br />
 
           <br />
           
@@ -134,9 +124,7 @@
         <h1>Zero risk</h1>
         <h2>Trading and risk management services</h2>
         <p>
-          We offer trading and risk management services, odds management
-          advice and winnings coverage, which means if the platform doesn not
-          generate a revenue, WE PAY YOUR PLAYERS FOR YOU!
+          We provide comprehensive trading and risk management services, along with expert guidance on odds management. Additionally, we offer a unique feature - winnings coverage. In practical terms, this means that if your platform doesn't generate revenue, we step in and cover the payouts to your players. Your peace of mind is our priority.
         </p>
       </div>
     </div>
@@ -151,11 +139,7 @@
       <div class="branding-head">
         <h1>Sportsbook Branding</h1>
         <h2>Unlimited layouts</h2>
-        <p>
-          Choose from <b>many sportsbook layouts</b> , we have a wide
-          selection of templates. Or create your own layout through the
-          <b>API services</b>, you and your development team will be able to
-          build a bespoke User Interface in complete autonomy.
+        <p>Select from a <b>diverse array of sportsbook layouts</b>, with our extensive range of templates. Alternatively, exercise full creative control by crafting your own layout through our <b>API services</b>. With this option, you and your development team can autonomously construct a completely customized User Interface, tailored precisely to your vision.
         </p>
       </div>
     </div>
