--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -67,7 +67,7 @@
         <h1 class="bottom-marg letter-spacing font-weight">Customizations</h1>
         <h2 class="sec-header">Be unique</h2>
         <p>
-          <b class="bold">Vrnl's dedicated consultants will diligently gather your requirements and present you with a curated selection of templates and recent development achievements. It's important to note that all of our platforms are designed to be multilingual and support multiple currencies, and the user interface (UI) will be meticulously adapted to suit your specific needs.</b> <br />
+          <b class="bold">Vrnl's dedicated consultants will diligently gather your requirements </b>and present you with a curated selection of templates and recent development achievements. It's important to note that all of our platforms are designed to be multilingual and support multiple currencies, and the user interface (UI) will be meticulously adapted to suit your specific needs. <br />
 
           <br />
           Embark on your journey into the realm of Vrnl, where your unique vision comes to life.
@@ -91,7 +91,7 @@
         <p>
           We have already
           <b class="bold">
-            We have already seamlessly integrated the world's premier odds providers into our system, and if that doesn't suffice for your requirements, we are more than willing to incorporate your preferred choice as well.</b> <br />
+            We have already seamlessly integrated the world's </b> premier odds providers into our system, and if that doesn't suffice for your requirements, we are more than willing to incorporate your preferred choice as well. <br />
 
           <br />
           
