--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -3,9 +3,8 @@
     <div class="esports-betting-main">
         <div class="esports-betting-col1">
             <h1>eSports Betting Software</h1>
-            <p>The eSports betting software in our gaming platform offers your users the possibility to bet on Top esports games, with Live Twitch stream and Betting stream.</p>
-
-            <p style="padding-top: 2.25em;">The eSports phenomenon is very widespread in the United States and is now growing at a dizzying rate in the Latin American market.</p>
+            <p>Our gaming platform features eSports betting software, enabling your users to wager on top eSports games. They can even enjoy Live Twitch streams alongside the betting action.</p>
+            <p style="padding-top: 2.25em;">The eSports phenomenon has gained extensive popularity in the United States and is currently experiencing remarkable growth in the Latin American market.</p>
 
             <div class="esports-betting-col1-button">
                 <button class="button-design" routerLink="/contact">Start Now</button>
@@ -39,21 +38,14 @@
                 <br>
                 King of Glory</p>
                 
-               <p> In addition to the most popular titles, we also offer the most common esports genres included in our feed;</p>
-
-               <p><strong>Sports Games:</strong>  FIFA, Madden NFL, NBA 2K, Pro Evolution Soccer, Rocket League.</p>
-
-               <p><strong> Multiplayer Online like:</strong> Dota 2, League of Legends, Smite, Heroes of the Storm.</p>
-
-               <p><strong>First-Person Shooter FPS:</strong> CS:GO, Call of Duty, Rainbow Six: Siege, Overwatch.</p>
-
-               <p><strong> Fighting Games:</strong> Street Fighter, Super Smash Bros, Tekken.</p>
-
-               <p>Real-Time Strategy RTS: StarCraft: Brood War, Warcraft III, StarCraft II.</p>
-
-               <p>Battle Royale: PUBG, Fortnite, Apex Legends.</p>
-
-               <p>In short, the titles and games are really many, and they are constantly increasing.</p>
+                <p>Furthermore, in addition to the most popular titles, we also offer a wide range of common eSports genres through our feed:</p>
+                <p><strong>Sports Games:</strong> FIFA, Madden NFL, NBA 2K, Pro Evolution Soccer, Rocket League.</p>
+                <p><strong>Multiplayer Online titles like:</strong> Dota 2, League of Legends, Smite, Heroes of the Storm.</p>
+                <p><strong>First-Person Shooter FPS:</strong> CS:GO, Call of Duty, Rainbow Six: Siege, Overwatch.</p>
+                <p><strong>Fighting Games:</strong> Street Fighter, Super Smash Bros, Tekken.</p>
+                <p><strong>Real-Time Strategy RTS:</strong> StarCraft: Brood War, Warcraft III, StarCraft II.</p>
+                <p><strong>Battle Royale:</strong> PUBG, Fortnite, Apex Legends.</p>
+                <p>In summary, our collection of titles and games is vast and continually expanding to keep your users engaged.</p>
         </div>
         <div class="top-esports-col2">
                 <div class="top-esports-col2-image">
@@ -119,10 +111,9 @@
         <div class="easy-setup-col2">
     <h3>Easy setup, less than you might imagine.</h3>
 
-    <p>We delivers the eSports platform in few weeks.<br>
-    We will take care of everything: Hosting, User Interface, odds feed, customized pages, products activation and sportsbook strategy.</p>
-
-    <p><strong> Your sole focus will be on the setting up and creation of the online networks.</strong></p>
+    <p>We can deliver the eSports platform in just a matter of weeks.<br>
+        We handle all aspects of the process: Hosting, User Interface, odds feed, customized pages, product activation, and sportsbook strategy.</p>
+        <p><strong>Your primary focus can be dedicated to setting up and establishing your online networks.</strong></p>
         </div>
     </div>
 </section>
@@ -137,11 +128,9 @@
         <div class="esports-betting-middle-row1">
 
             <div class="esport_bet_center">
-<h2>If you want to enter the business of the Online Gambling, our eSports betting software could help you to take the first steps.</h2>
-
-<p>Take advantage of our professional services and expertise, as well as of our eSports betting platforms and Technology. Our regulated partners receive all the support they need to enter the online Betting industry and are provided with Branded / Non-Branded versions of our platforms.</p>
-
-<p>Starting an Online Sportsbook focused on eSports can be tricky! That is why we have created a complete eSports Betting environment, with Pre-match Betting Services with the aim of offering you the widest selection of eSports available online.</p>
+                <h2>If you're contemplating an entry into the realm of Online Gambling, our eSports betting software offers a valuable initial stride.</h2>
+                <p>Leverage our professional services, expertise, and our advanced eSports betting platforms and technology. Our regulated partners receive comprehensive support to venture into the online betting industry and can access Branded/Non-Branded versions of our platforms.</p>
+                <p>Embarking on the establishment of an Online Sportsbook with a primary focus on eSports can present its challenges! This is precisely why we've curated an all-encompassing eSports Betting environment, complete with Pre-match Betting Services, with the goal of providing you with the widest array of eSports options available online.</p>
             </div>
         </div>
         <div class="esports-betting-middle-row2">
