--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -4,11 +4,8 @@
       <div class="sports_if_col">
         <h1 class="sports_header">Sportsbook iFrame</h1>
         <p class="sports_para">
-          Sportsbook iFrame allow you to enable the sportsbook module in a few
-          days through the integration of API requests. Furthermore, the
-          Sportsbook service is completely managed by us and we guarantee the
-          widest programming of online events and markets.
-        </p>
+          The Sportsbook iFrame offers the capability to activate the sportsbook module within a matter of days through API integration. Additionally, our fully managed Sportsbook service ensures the broadest programming of online events and markets, all overseen by us.
+      </p>
 
         <button class="button_slide slide_right" routerLink="/contact">
           <i class="fa-solid fa-phone"></i> Contact us!
@@ -30,22 +27,18 @@
       <div class="sports_col_1">
         <h1 class="types_header">Types of sportsbook iframe</h1>
         <p class="type_para">
-          The Sportsbook iFrame solutions are three and based on the channel
-          used, we provide the most suitable for you:
-        </p>
-        <ul class="types_list">
+          Our Sportsbook iFrame solutions come in three variants, each tailored to the channel used, ensuring the most suitable option for your needs:</p>
+      <ul class="types_list">
           <li>
-            iFrame for <strong> Desktop </strong> , for computers of any resolution with different
-            and customizable layouts.
+              iFrame for <strong>Desktop</strong>, designed for computers with varying resolutions and featuring diverse and customizable layouts.
           </li>
           <li>
-            iFrame for <strong>Terminals and kiosks SSBT</strong> , the layout is studied to adapt to touchscreen systems and the user experience is minimal to allow inexperienced players to place bets.
+              iFrame for <strong>Terminals and Kiosks SSBT</strong>, with layouts optimized for touchscreen systems and an intuitive user experience, making it ideal for inexperienced players placing bets.
           </li>
-        </ul>
-        <p class="type_para">
-          Furthermore through API it is possible to customize graphics and
-          game functions
-        </p>
+      </ul>
+      <p class="type_para">
+          Furthermore, through our API, you can achieve extensive customization of graphics and game functions.
+      </p>
         <br />
         <br />
 
@@ -70,14 +63,9 @@
       </div>
     
       <div class="sports_col_iframe">
-        <h1 class="types_header">Fully managed sportsbook</h1>
+        <h1 class="types_header">Comprehensive Managed Sportsbook</h1>
         <p class="type_para">
-          Our Sportsbook iFrame includes the provision of the odds data feed
-          and configuration of the main betting settings. The software embeds
-          many features and tools to manage the odds margins and
-          configurations autonomously. But if you want to focus on the Players
-          management and marketing only, we provide full managed trading
-          services and support.
+            Our Sportsbook iFrame encompasses the supply of odds data feeds and the configuration of core betting settings. The software comes equipped with an array of features and tools for independent management of odds margins and configurations. However, if your primary focus is on player management and marketing, we offer fully managed trading services and support.
         </p>
 
         <br />
@@ -92,21 +80,28 @@
 <div class="sport_sol_row">
  
   <div class="sport_sol_col_1">
-    <h1 class="header_iframes">To get the sportsbook iframe solution is very easy</h1>
-    <p class="gaming_para_iframe">
-      We’ve made it as easy as possible to activate the iFrame, just five steps:
-    </p>
-    <ol class="gaming_para_iframe">
-      <li>
+   
+<h1 class="header_iframes">Acquiring the Sportsbook iFrame Solution Is Effortless</h1>
+<p class="gaming_para_iframe">
+    We've streamlined the process for activating the iFrame, encompassing just five simple steps:
+</p>
+<ol class="gaming_para_iframe">
+    <li>
         Formalize the agreement between Vrnl and the customer.
-      </li>
-      <li>Start the sportsbook iFrame integration through APIs with our sdk.</li>
-      <li>
-        Meeting to define the sportsbook strategy to follow.
-      </li>
-      <li>Definition of most interesting sports and events by following your operating area.</li>
-      <li>Let’s go live!</li>
-    </ol>
+    </li>
+    <li>
+        Initiate the sportsbook iFrame integration via APIs using our SDK.
+    </li>
+    <li>
+        Conduct a meeting to define the sportsbook strategy to pursue.
+    </li>
+    <li>
+        Identify the most engaging sports and events tailored to your operating area.
+    </li>
+    <li>
+        Let's go live!
+    </li>
+</ol>
   </div>
   <div class="sport_sol_col">
     <img class="i-frame_img1" src="assets/vrnl_iframe.webp" alt="sportsbook iframe">
