--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,8 +9,7 @@
         </h1>
       </section>
       <p class="param" style="color: #686868 !important;font-family: Poppins;">
-        A company which is constantly striving for Innovative Solutions for
-        the Business Needs
+        A company that consistently pursues innovative solutions to meet its business needs.
       </p>
     </div>
   </section>
@@ -101,28 +100,22 @@
     <div class="about-section1-para">
       <p style="margin-bottom: 20px" style="color: #686868;">
         <strong style="color: #000;">
-          Vrnl is a Sportsbook and Gaming Provider with 15 years of
-          experience in the gambling industry.
+          Vrnl is a well-established Sportsbook and Gaming Provider with a remarkable 10-year track record in the gambling industry.
         </strong>
-        We have been supplying bookmakers, lotteries and betting organizations
-        in regulated markets since 2005.
+        Since 2012, we have been dedicated to supplying bookmakers, lotteries, and betting organizations in regulated markets.
       </p>
       <p>&nbsp;</p>
 
       <p style="margin-bottom: 20px">
         <i style="color: #686868;font-size: 17px;"
-          >“We are creative strategists, nerds and communicators with a huge
-          passion for online gaming and we work hard to build our customers’
-          success in the business.”
+          >"We are a team of creative strategists, tech enthusiasts, and effective communicators, driven by an unwavering passion for the online gaming industry. Our relentless commitment is to foster the success of our clients in the business."
         </i>
       </p>
       <p>&nbsp;</p>
 
       <p style="margin-bottom: 20px;font-size: 17px;color: #686868;">
-        Our gaming platform is just one of the reasons that brought Vrnl to
-        be the International Software House it is today.<strong style="color: #000;">
-          With 15 years of experience in this sector, Vrnl offers services
-          to more than 40 bookmakers in 11 countries in the world.</strong
+        Our cutting-edge gaming platform stands out as one of the key factors that have propelled Vrnl to its current status as an esteemed International Software House.<strong style="color: #000;">
+          Leveraging our extensive 10-year expertise in this sector, Vrnl proudly extends its services to over 40 bookmakers across 11 different countries worldwide.</strong
         >
       </p>
       <p>&nbsp;</p>
