--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,7 +5,7 @@
          <section class="typing-container">
              <h1 class="home_header_h1">Contact Us  <span class="typing-text"></span></h1>
            </section>
-           <p class="param">A company which is constantly striving for Innovative Solutions for the Business Needs</p>
+           <p class="param">A company that consistently pursues innovative solutions to meet its business needs.</p>
  
     </div>
  </section>
