--- a/src/app/risk-management/risk-management.component.html
+++ b/src/app/risk-management/risk-management.component.html
@@ -8,8 +8,7 @@
         </h1>
       </section>
       <p class="param1">
-        A company which is constantly striving for Innovative Solutions for
-        the Business Needs
+        A company that consistently pursues innovative solutions to meet its business needs.
       </p>
     </div>
   </section>
