--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -24,12 +24,12 @@
     <div class="sports_book_col">
 <h2 class="sports_book_h1">Online sportsbook software
 </h2>
-<p class="sports_param">We deliver to you a complete and performing online sportsbook software. Indeed, the wide offer of live matches available on monthly basis and the live streaming options will set your bookie in an entertainment platform, fully certified by independent gaming laboratories.</p>
+<p class="sports_param">We provide you with a fully functional online sportsbook software, complete with an extensive selection of live matches offered on a monthly basis. Additionally, our live streaming options will transform your bookie into an entertainment platform, all backed by independent gaming laboratories' certifications for added assurance.</p>
 
 
 <div class="onther_param">
-<h2 class="onther_head">We make it easy for you to plug into business.</h2>
-<p class="onther_p1">This is a theme and can be customized, see it in action:</p>
+<h2 class="onther_head">We simplify the process for you to seamlessly integrate into the business.</h2>
+<p class="onther_p1">This theme is highly customizable, and you can experience its flexibility in action:</p>
 <p class="onther_a"><a href=" https://www.lc247.co/  " target="_blank"  class="lc247"><strong> https://www.lc247.co/  </strong></a></p>
 </div>
 
@@ -53,24 +53,24 @@
 </div>
 <div class="features_col_1">
  <h1 class="feature_header"><span>Online sportsbook software</span><strong> Main features</strong></h1> 
- <p class="feature_para">Betting and online Casino management is now transforming with the help of Vrnl:</p>  
+ <p class="feature_para">Vrnl is at the forefront of revolutionizing betting and online casino management. With our expertise, you gain access to:</p>  
  <ul class="feature_list">
-    <li>All popular worldwide sports, all leagues, and all betting markets
+    <li>A comprehensive array of sports, leagues, and betting markets worldwide.
     </li>
-    <li>150.000 pre-match monthly
+    <li>A vast selection of 150,000 monthly pre-match options.
     </li>
-    <li>75.000 in-play monthly
+    <li>75,000 monthly in-play opportunities.
     </li>
-    <li>Thousands of Casino games also suitable for the metaverse
+    <li>An extensive collection of casino games suitable for the metaverse.
     </li>
-    <li>Integrate our iframe into your iGaming platform.
+    <li>Seamlessly integrate our iframe into your iGaming platform.
     </li>
-    <li>Automated trading tools that give you control of your own margins, suspensions, odds ladders and more.</li>
-    <li>Bonus Tools, Campaign builder
+    <li>Utilize automated trading tools, providing control over margins, suspensions, odds ladders, and more.</li>
+    <li>Take advantage of bonus tools and a campaign builder for effective promotions.
     </li>
-    <li>Many Marketing tools.
+    <li>Access a wide range of marketing tools.
     </li>
-    <p>Can be integrated via API or iFrame.</p>
+    <p>Integration options available via API or iFrame for your convenience.</p>
  </ul>
 </div>
 </div>
@@ -83,9 +83,9 @@
   </h2>
   <div class="wpb_text_column wpb_content_element ">
 		<div class="wpb_wrapper">
-			<p>We offer <a style="color: #a0c528;" href="#">White Label Casino</a> with over 1,000 games</p>
-<p>Gaming license and legal Service to start Casino business, the gaming math is secure and certified.</p>
-<p>We have singled up the best gaming providers with the aim of offering you the widest selection of&nbsp;live casino games&nbsp;and&nbsp;casino games available online.</p>
+			<p>We provide a <a style="color: #a0c528;" href="#">White Label Casino</a> solution featuring an extensive library of over 1,000 games.</p>
+<p>Our services include obtaining a gaming license and legal support to kickstart your casino business, ensuring secure and certified gaming math.</p>
+<p>We have singled up the best gaming providers with the aim of offering you the widest selection of&nbsp;live casino games&nbsp;and&nbsp;casino games available online.We've carefully curated partnerships with top gaming providers to offer you an unparalleled variety of live casino games and online casino games, guaranteeing the most extensive selection available.</p>
 
 		</div>
 	</div>
