--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -2,8 +2,9 @@
 <section>
     <div class="mobile-sports-main">
         <div class="mobile-sports-left">
-            <h1>Mobile sports betting software</h1>
-            <p>With <strong> Mobile app</strong> your bettors can access their gaming accounts and can bet with ease using tablet, smartphone and other mobile devices connected to the internet. </p>
+           
+<h1>Mobile Sports Betting Software</h1>
+<p>Our <strong>Mobile app</strong> empowers your bettors to effortlessly access their gaming accounts and place bets via tablets, smartphones, and other internet-connected mobile devices.</p>
         </div>
 
         <div class="mobile-sports-right"></div>
@@ -17,21 +18,19 @@
 <section>
     <div class="mobile-advantages-main">
         <div class="mobile-advantages-left">
-            <h1>Advantages of Mobile sports betting software</h1>
-            <p><strong> Mobile Apps are faster</strong>
+            <h1>Advantages of Mobile Sports Betting Software</h1>
+            <p><strong>Mobile Apps are Faster</strong>
                 <br>
-                Applications are faster than mobile websites and they perform actions much faster too. </p>
-
-            <p><strong> Personalized betting content</strong>
+                Applications outpace mobile websites, offering swifter actions and responses.
+            </p>
+            <p><strong>Personalized Betting Content</strong>
                 <br>
-                Users love personalized content for an immersive experience, tailored betting content according to their preferences. </p>
-
-
-            <p><strong> Instant Online bet</strong>
+                Users relish personalized content for a more immersive experience, featuring tailored betting options aligned with their preferences.
+            </p>
+            <p><strong>Instant Online Betting</strong>
                 <br>
-                All mobile apps offer instant access by a tap. The allow users to place a bet, check the game account, play casino and choose the favourite league. </p>
-
-           
+                All mobile apps grant instant access with a simple tap, enabling users to place bets, check their gaming accounts, engage in casino games, and select their favorite leagues without delay.
+            </p>
     
 
         </div>
